Correct some mistakes

--- a/MicrosoftSecurityIncidentPrediction.ipynb
+++ b/MicrosoftSecurityIncidentPrediction.ipynb
@@ -44,7 +44,7 @@
    "id": "c4c729e7-eeef-437e-b1e3-3caaa08aa6ad",
    "metadata": {},
    "source": [
-    "A continuación, procederemos a obtener los datos. En primer lugar, destacar que en el dataset original existen dos tipos de archivos: train y test. Dado que estos datasets son muy grandes, vamos a particionarlos y tomar una muestra de ellos. Para lograr esto, cogeremos unas 4000 mil rows de manera aleatoria a lo largo del archivo. En este caso, tomaremos la muestra inicial del archivo GUIDE_TEST."
+    "A continuación, procederemos a obtener los datos. En primer lugar, destacar que en el dataset original existen dos tipos de archivos: train y test. Dado que estos datasets son muy grandes, vamos a particionarlos y tomar una muestra de ellos. Para lograr esto, cogeremos unas cuatro mil filas de manera aleatoria a lo largo del archivo. En este caso, tomaremos la muestra inicial del archivo GUIDE_TEST."
    ]
   },
   {
@@ -57,7 +57,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Archivo '/home/yasin/Documents/apa/practica-APA/microsoft_Reduced.csv' cargado con 4000 filas.\n",
+      "Archivo cargado con 4000 filas.\n",
       "              Id  OrgId  IncidentId  AlertId                 Timestamp  \\\n",
       "0  1228360649769    378         783    39817  2024-06-08T22:30:10.000Z   \n",
       "1  1571958032592    613        3036    17081  2024-06-15T21:14:41.000Z   \n",
@@ -105,12 +105,12 @@
     "    df_reduced = df_original.sample(n=4000, random_state=42)\n",
     "\n",
     "    reduced_df.to_csv(reduced_file_path, index=False)\n",
-    "    print(f\"Archivo '{reduced_file_path}' creado con 4000 filas seleccionadas aleatoriamente.\")\n",
+    "    print(f\"Archivo creado con 4000 filas seleccionadas aleatoriamente.\")\n",
     "    \n",
     "else:\n",
     "    # Paso 4: Si el archivo reducido ya existe, solo lo cargamos\n",
     "    reduced_df = pd.read_csv(reduced_file_path)\n",
-    "    print(f\"Archivo '{reduced_file_path}' cargado con {len(reduced_df)} filas.\")\n",
+    "    print(f\"Archivo cargado con {len(reduced_df)} filas.\")\n",
     "\n",
     "print(reduced_df.head())"
    ]
@@ -1390,7 +1390,7 @@
     "Antes de proceder con los siguinetes apartados, comentar que nuestra tarea principal es predecir etiquetas de triage (clasificaciones) de incidentes: True Positive (TP), Benign Positive (BP) y False Positive (FP).\n",
     "True Positive son aquellos que representan una amenaza real que ha sido correctamente identificada y clasificada como tal por el sistema.\n",
     "Benign Positive son aquellos que fueron inicialmente identificados como amenazas, pero que en realidad son falsos positivos.\n",
-    "False Positive son aquellos que el modelo identifica incorrectamente como amenazas.\n",
+    "False Positive son aquellos que el modelo identifica incorrectamente como amenazas. Visto esto, creemos que este problema se debe resolver mediante clasificación.\n",
     "\n",
     "En primer lugar, es importante destacar que en nuestro conjunto de datos existen variables numéricas y variables categóricas. Algunas de estas variables tienen missing values; en las siguientes secciones, analizaremos cómo tratar estos casos.\n",
     "\n",
