Add Logistic Regretion

--- a/MicrosoftSecurityIncidentPrediction.ipynb
+++ b/MicrosoftSecurityIncidentPrediction.ipynb
@@ -17,12 +17,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install kagglehub --quiet"
+    "!pip install kagglehub --quiet\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "b5bdde3e",
    "metadata": {
     "scrolled": true
@@ -31,6 +31,7 @@
    "source": [
     "import kagglehub\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import os\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "577f1259-1700-481d-9a9f-bfae2dc98347",
    "metadata": {},
    "outputs": [
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "2646d1ff",
    "metadata": {
     "scrolled": true
@@ -333,7 +334,7 @@
        "[5 rows x 46 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "71ea6497-8496-4691-b4c5-98a1182c2907",
    "metadata": {},
    "outputs": [
@@ -1232,7 +1233,7 @@
        "Usage                           NaN  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1244,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "3244acf2",
    "metadata": {},
    "outputs": [
@@ -1312,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "baa33c31",
    "metadata": {
     "scrolled": true
@@ -1401,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "a0857a9e",
    "metadata": {},
    "outputs": [
@@ -1419,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "044a423a-f691-4526-a50b-59c8f63f84e7",
    "metadata": {},
    "outputs": [
@@ -1469,7 +1470,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
+   "id": "ae65a554",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tipos de cada variable:\n",
+      "OrgId                 int64\n",
+      "Timestamp            object\n",
+      "DetectorId            int64\n",
+      "AlertTitle            int64\n",
+      "Category             object\n",
+      "MitreTechniques      object\n",
+      "IncidentGrade        object\n",
+      "ActionGrouped        object\n",
+      "ActionGranular       object\n",
+      "EntityType           object\n",
+      "EvidenceRole         object\n",
+      "IpAddress             int64\n",
+      "Url                   int64\n",
+      "AccountUpn            int64\n",
+      "AccountName           int64\n",
+      "DeviceName            int64\n",
+      "RegistryKey           int64\n",
+      "RegistryValueName     int64\n",
+      "RegistryValueData     int64\n",
+      "ApplicationName       int64\n",
+      "ThreatFamily         object\n",
+      "FileName              int64\n",
+      "FolderPath            int64\n",
+      "Roles                object\n",
+      "OSFamily              int64\n",
+      "OSVersion             int64\n",
+      "AntispamDirection    object\n",
+      "SuspicionLevel       object\n",
+      "LastVerdict          object\n",
+      "CountryCode           int64\n",
+      "State                 int64\n",
+      "City                  int64\n",
+      "Usage                object\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Obtener el tipo de cada variable\n",
+    "variable_types = reduced_cleaned_df.dtypes\n",
+    "print(\"Tipos de cada variable:\")\n",
+    "print(variable_types)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "be9ce494-0cd5-4b3f-ac95-0075d409ed7e",
    "metadata": {},
    "outputs": [
@@ -1510,9 +1566,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "8604209b-1a2f-4390-add9-7df8b01a1991",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1552,13 +1610,136 @@
    "source": [
     "Dado que es un ejemplo de clasificacion, intentar trazar una regresion sobre la variable objetivo (categorica) es complicado"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7c5c12b",
+   "metadata": {},
+   "source": [
+    "## Regresion Logistica Basica\n",
+    "\n",
+    "Necesitamos que las variables estan todas en numericas y estandarizadas para poder aplicar una regresion logistica "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b349e25a",
+   "metadata": {},
+   "source": [
+    "El código realiza la preparación de datos para un modelo de clasificación.\n",
+    "\n",
+    "Separa las características del conjunto de datos y la variable objetivo, convirtiendo las variables categóricas en formato numérico mediante One-Hot Encoding. \n",
+    "\n",
+    "Después, divide los datos en conjuntos de entrenamiento y prueba, estandariza las características numéricas, y combina estos datos escalados con las variables categóricas, creando conjuntos listos para el modelado."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "3280a4e8",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = reduced_cleaned_df\n",
+    "X = df.drop(columns=['IncidentGrade'])\n",
+    "y = df['IncidentGrade']\n",
+    "\n",
+    "X_encoded = pd.get_dummies(X, drop_first=True)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_encoded, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "numeric_cols = X_train.select_dtypes(include=['float64', 'int64']).columns\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = X_train[numeric_cols].copy()\n",
+    "X_train_scaled[numeric_cols] = scaler.fit_transform(X_train[numeric_cols])  # Ajusta y transforma\n",
+    "X_test_scaled = X_test[numeric_cols].copy()\n",
+    "X_test_scaled[numeric_cols] = scaler.transform(X_test[numeric_cols])  # Solo transforma\n",
+    "\n",
+    "X_train_final = pd.concat([X_train_scaled, X_train.drop(columns=numeric_cols)], axis=1)\n",
+    "X_test_final = pd.concat([X_test_scaled, X_test.drop(columns=numeric_cols)], axis=1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4dc0d219",
+   "metadata": {},
+   "source": [
+    "Lo diguiente implementa un modelo de regresión logística para clasificar los datos. Primero, crea y ajusta el modelo con el conjunto de entrenamiento, y luego realiza predicciones sobre el conjunto de prueba.\n",
+    "\n",
+    "Finalmente, evalúa el rendimiento del modelo calculando la precisión, la matriz de confusión y un informe de clasificación que resume el desempeño en cada clase."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "6cf1bd84",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.68\n",
+      "Confusion Matrix:\n",
+      "[[308  12  32]\n",
+      " [ 91  46  33]\n",
+      " [ 81   5 192]]\n",
+      "Classification Report:\n",
+      "                precision    recall  f1-score   support\n",
+      "\n",
+      "BenignPositive       0.64      0.88      0.74       352\n",
+      " FalsePositive       0.73      0.27      0.39       170\n",
+      "  TruePositive       0.75      0.69      0.72       278\n",
+      "\n",
+      "      accuracy                           0.68       800\n",
+      "     macro avg       0.71      0.61      0.62       800\n",
+      "  weighted avg       0.70      0.68      0.66       800\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
+    "\n",
+    "model = LogisticRegression(max_iter=1000) \n",
+    "\n",
+    "model.fit(X_train_final, y_train)\n",
+    "\n",
+    "y_pred = model.predict(X_test_final)\n",
+    "\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "confusion = confusion_matrix(y_test, y_pred)\n",
+    "report = classification_report(y_test, y_pred)\n",
+    "\n",
+    "print(f\"Accuracy: {accuracy:.2f}\")\n",
+    "print(\"Confusion Matrix:\")\n",
+    "print(confusion)\n",
+    "print(\"Classification Report:\")\n",
+    "print(report)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa224ed4",
+   "metadata": {},
+   "source": [
+    "Precisión del modelo: 68%."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python (myenv)",
    "language": "python",
-   "name": "python3"
+   "name": "apa"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1570,7 +1751,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
