DataPartion done and writed on overleaf

--- a/src/DataPreparation.ipynb
+++ b/src/DataPreparation.ipynb
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94974687",
+   "id": "efb3268c",
    "metadata": {},
    "source": [
     "At first glance, we notice a significant number of missing values in several attributes!"
@@ -1297,7 +1297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dbf3937",
+   "id": "a29382bb",
    "metadata": {},
    "source": [
     "Indeed, we observe that the \"counts\" in many attributes are not 10,000, indicating the presence of missing values. In fact, some don't even reach half of 10,000, meaning the amount of missing values in certain attributes is quite substantial."
@@ -1443,7 +1443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd9805c7",
+   "id": "4f43888d",
    "metadata": {},
    "source": [
     "There are 10 attributes with missing values, and it's not just a small number of missings in each attribute; more than 50% are missing, with many exceeding 90%. This could hint that we may need to eliminate some variables, as imputation might not be the best option given the high proportion of missing data. \n",
@@ -1522,7 +1522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6813c72",
+   "id": "3c8833b3",
    "metadata": {},
    "source": [
     "We see a balanced proportion of categorical and numerical variables, with a slight majority of numerical ones. However, some are useless as they are unique identifiers that do not provide any valuable information."
@@ -1599,7 +1599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10ae0e81",
+   "id": "2854aecf",
    "metadata": {},
    "source": [
     "The most notable aspect of these distribution plots is the presence of numerical attributes where only a few individuals have a very low value for the attribute, while many have a high value. This could indicate the presence of extreme values or outliers.\n",
@@ -1661,7 +1661,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "21db00ab",
+   "id": "ad0c00ab",
    "metadata": {},
    "source": [
     "Regarding the categorical variables, the 'MitreTechniques' variable, due to its many different categories, caused the plot to be completely distorted, so we have excluded it.\n",
@@ -1704,7 +1704,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7d8020e",
+   "id": "c0720a29",
    "metadata": {},
    "source": [
     "Let's pay special attention to the target variable.\n",
@@ -1744,7 +1744,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32483fe9",
+   "id": "0f1d2f67",
    "metadata": {},
    "source": [
     "Regarding the correlations between variables, we observe certain white areas, indicating no relationship, and some blue zones, which suggest an inverse relationship, but we can see in the legend that it ranges between -0.2 and -0.3. We also notice some red sections, indicating a direct relationship.\n",
@@ -1959,7 +1959,7 @@
    "id": "e737cad3",
    "metadata": {},
    "source": [
-    "Vemos que todos los valores faltantes son categoricas."
+    "As we can see, they are all categorical"
    ]
   },
   {
@@ -2043,7 +2043,9 @@
    "id": "52578ed9-4a20-49ae-b0c2-50217bb078b6",
    "metadata": {},
    "source": [
-    "The first observation is that \"LastVerdict\" is correlated with \"SuspicionLevel.\" AQUI HEMOS DE HACER ALGO"
+    "Disregarding the one-to-one relationship between ActionGrouped and ActionGranular (as it doesn't provide useful information), \n",
+    "\n",
+    "the first observation is that \"LastVerdict\" is correlated with \"SuspicionLevel.\" We will focus specifically on these two variables in the following sections."
    ]
   },
   {
@@ -3041,7 +3043,9 @@
    "cell_type": "code",
    "execution_count": 37,
    "id": "6bcd2334",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3197,7 +3201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cda7326",
+   "id": "195127f6",
    "metadata": {},
    "source": [
     "#### (*)\n",
@@ -3208,7 +3212,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "3cfd71a3",
+   "id": "77f8f886",
    "metadata": {
     "scrolled": false
    },
@@ -3251,7 +3255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a24729b9",
+   "id": "55a8c43c",
    "metadata": {},
    "source": [
     "We observe that the target variable (IncidentGrade) shows some inverse correlation with location-related attributes (Country, State, City), which could suggest that the location-related attributes might play a role in reducing the severity of incidents, possibly due to regional differences in attack patterns or defense mechanisms.\n",
