--- a/src/DataPreparation.ipynb
+++ b/src/DataPreparation.ipynb
@@ -1757,7 +1757,7 @@
    "id": "a2b284e3",
    "metadata": {},
    "source": [
-    "Let's explore the incidents reports over the timestamp."
+    "Since we have a timestamp, we can plot how many incidents happened each day:"
    ]
   },
   {
@@ -3048,7 +3048,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "apaLab",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3062,7 +3062,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
