coment concluion chandeg

--- a/src/ModelTrainingAndEvaluation.ipynb
+++ b/src/ModelTrainingAndEvaluation.ipynb
@@ -1491,15 +1491,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **KNN** outperforms the other models with the highest **test accuracy** (0.69), **precision** (0.685), and **recall** (0.643), leading to the best **F1 score** (0.653).\n",
-    "  \n",
-    "- **Logistic Regression** has good **precision** (0.720), but its **recall** (0.470) and **F1 score** (0.420) are lower than KNN, indicating an imbalance between precision and recall.\n",
+    "#### Model Performance Summary\n",
     "\n",
-    "- **MNB** shows the weakest performance with the lowest **precision** (0.375), **recall** (0.438), and **F1 score** (0.380).\n",
+    "- **KNN**: KNN has the highest cross-validation accuracy (0.720) and test accuracy (0.685). It also performs well in precision, recall, and F1 score, making it the best overall model for this dataset. KNN strikes a good balance in detecting both positive and negative cases.\n",
     "\n",
-    "- **GNB** has the poorest results across all metrics, especially **precision** (0.141) and **F1 score** (0.198), indicating it performs poorly on both precision and recall.\n",
+    "- **BNB (Bernoulli Naive Bayes)**: This model performs moderately well, with a test accuracy of 0.572. Its precision score is decent (0.603), but it struggles with recall (0.474) and F1 score (0.418), indicating it misses many positive instances, making it less reliable.\n",
     "\n",
-    "KNN is the strongest model, while both Naive Bayes variants (MNB and GNB) perform much worse.\n"
+    "- **Logistic Regression**: Although Logistic Regression has the highest precision (0.720), its recall (0.470) and F1 score (0.420) are lower, meaning it struggles to detect positive cases. Its test accuracy of 0.565 suggests it's not the best performer overall.\n",
+    "\n",
+    "- **MNB (Multinomial Naive Bayes)**: MNB has the lowest test accuracy (0.530) and shows poor performance in precision (0.375), recall (0.438), and F1 score (0.380). This indicates it is not effective for this classification task.\n",
+    "\n",
+    "- **GNB (Gaussian Naive Bayes)**: GNB performs the worst, with a very low test accuracy (0.423) and extremely poor precision (0.141), recall (0.333), and F1 score (0.198). This model fails to classify data correctly and should not be used for this problem.\n",
+    "\n"
    ]
   },
   {
@@ -1649,13 +1652,15 @@
     "### Conclusion: Linear/Quadratic Models\n",
     "\n",
     "\n",
-    "**KNN** outperforms all models with the highest **test accuracy** (0.69), **precision** (0.685), and **recall** (0.643), leading to the best **F1 score** (0.653), making it the best option for this dataset. \n",
     "\n",
-    "**Logistic Regression** shows good **precision** (0.720) but lower **recall** (0.470) and **F1 score** (0.420), indicating a trade-off between precision and recall.\n",
+    "- **KNN**: Best overall performance with high precision, recall, and F1 score. Accuracy: 0.69.\n",
+    "- **Logistic Regression**: Good precision for `BenignPositive` (0.50), but very low recall for `FalsePositive` (0.03). Accuracy: 0.56.\n",
+    "- **BernoulliNB**: Strong for `BenignPositive` but weak for `FalsePositive` (precision 0.50, recall 0.02). Accuracy: 0.57.\n",
+    "- **MultinomialNB**: Low precision for `FalsePositive` (0.00) and poor recall. Accuracy: 0.53.\n",
+    "- **GaussianNB**: Worst performance with 0.00 precision and recall for `FalsePositive` and `TruePositive`. Accuracy: 0.42.\n",
     "\n",
-    "**MNB** and **GNB** perform poorly, with **MNB** having the lowest metrics (precision: 0.375, recall: 0.438, F1: 0.380), and **GNB** struggling across all metrics, especially **precision** (0.141).\n",
-    "\n",
-    "In conclusion, **KNN** is the best-performing model, while **MNB** and **GNB** are unsuitable for the task.\n"
+    "### Conclusion:\n",
+    "**KNN** is the best model, outperforming others in all metrics.\n"
    ]
   },
   {
@@ -3183,13 +3188,6 @@
     "dump(bnb_model, filepath+'bernoulli_nb_model.joblib')\n",
     "print(f\"Execution time: {timedelta(seconds=time() - init_time)}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -3197,7 +3195,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "apaLab",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3211,7 +3209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
