--- a/src/ModelTrainingAndEvaluation.ipynb
+++ b/src/ModelTrainingAndEvaluation.ipynb
@@ -2856,7 +2856,9 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3044,6 +3046,23 @@
     "results_dfLinear.sort_values(by=['test acc'], ascending=False)\n",
     "print('Non Linear Models')\n",
     "results_dfNonLinear.sort_values(by=['test acc'], ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "#### Random Forest:\n",
+    "Random Forest shows solid performance with a cross-validation accuracy of 0.831 and a test accuracy of 0.824. It excels in precision (0.841) and has a good balance between recall (0.794) and F1 score (0.809), making it a reliable model.\n",
+    "\n",
+    "#### Gradient Boosting:\n",
+    "Gradient Boosting has the highest cross-validation accuracy (0.866), but its test accuracy drops to 0.809. It performs well in precision (0.813) but has slightly lower recall (0.781) and F1 score (0.792), indicating some overfitting.\n",
+    "\n",
+    "#### RBF SVM:\n",
+    "RBF SVM has a much lower cross-validation accuracy (0.673) and test accuracy (0.604), with poor recall (0.508) and F1 score (0.463), indicating it struggles to classify minority classes.\n",
+    "\n",
+    "**Random Forest** is the best overall model, while **Gradient Boosting** is prone to overfitting, and **RBF SVM** underperforms.\n"
    ]
   },
   {
