--- a/src/DataPreparation.ipynb
+++ b/src/DataPreparation.ipynb
@@ -3166,7 +3166,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "apaLab",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3180,7 +3180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
