Rerun DataPreparation; no changes need to be applied

--- a/src/DataPreparation.ipynb
+++ b/src/DataPreparation.ipynb
@@ -115,7 +115,7 @@
     "    )\n",
     "    \n",
     "    df_reduced.to_csv(reduced_file_path, index=False)\n",
-    "    print(f\"Reduced file created with {len(df_reduced)} rows, maintaining class proportions.\")\n"
+    "    print(f\"Reduced file created with {len(df_reduced)} rows, maintaining class proportions.\")"
    ]
   },
   {
