--- a/src/DataPreparation.ipynb
+++ b/src/DataPreparation.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "89241154",
+   "metadata": {},
+   "source": [
+    "# Authors\n",
+    "- Muhammad Yasin Khokhar\n",
+    "- Momin Miah Begum\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "64a6bf8e",
    "metadata": {},
    "source": [
