--- a/src/ModelTrainingAndEvaluation.ipynb
+++ b/src/ModelTrainingAndEvaluation.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Authors\n",
+    "- Muhammad Yasin Khokhar\n",
+    "- Momin Miah Begum\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "Bv7h8TN0ayeW"
    },
